// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateField wrapper component handles invalid dates day and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is a leap day but not a leap year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is invalid for month and year 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates day is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates empty date 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month and day are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month and year are not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates month is out of range 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is 3 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is 5 digits 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component handles invalid dates year is not set 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component passes other props along to design system component 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="THE DAY"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint=""
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;

exports[`DateField wrapper component renders properly with defaults 1`] = `
<DateField
  dateFormatter={[Function]}
  dayInvalid={false}
  dayLabel="Day"
  dayName="day"
  errorMessage={Array []}
  errorPlacement="bottom"
  hint="For example: 4 / 28 / 1986"
  label="Date"
  monthInvalid={false}
  monthLabel="Month"
  monthName="month"
  onChange={[Function]}
  onComponentBlur={[Function]}
  yearInvalid={false}
  yearLabel="Year"
  yearName="year"
/>
`;
